Homepage - Recommendations: fix the inactive bullet bg color for dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,5 +74,10 @@
     --input: 221 38% 77%;
     --ring: 223 70% 67%;
     --radius: 0.5rem;
+    --swiper-pagination-bullet-inactive-color: #ccc;
   }
+}
+
+.swiper-pagination-bullet {
+  background: var(--swiper-pagination-bullet-inactive-color);
 }
